--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* @Fonts *********/
 /* Regular */
 @font-face{font-family:'Open Sans ExtraBoldItalic';
@@ -430,7 +429,7 @@ a:active {
 
 #mainleft {
 
-    max-width: 450px;
+    max-width: 525px;
     float: left;
     border-right: #5E5A5A dashed 1px;
   
@@ -448,8 +447,9 @@ a:active {
 
 
 #mainright {
-    max-width: 450px;
+    max-width: 375px;
     float: left;
+    margin-top: 40px;
     margin-left: 40px;
 }
 
